--- a/gb/21/10/4/n13280995.md
+++ b/gb/21/10/4/n13280995.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zwpqwo316/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/zwpqwo316/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/zwpqwo316/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zwpqwo316/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/zwpqwo316/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zwpqwo316/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/zwpqwo316/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zwpqwo316/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/zwpqwo316/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zwpqwo316/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/zwpqwo316/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zwpqwo316/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/zwpqwo316/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zwpqwo316/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/zwpqwo316/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zwpqwo316/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/zwpqwo316/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zwpqwo316/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/zwpqwo316/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zwpqwo316/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zwpqwo316/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zwpqwo316/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zwpqwo316/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zwpqwo316/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yirpaj3429/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>含芬太尼假冒处方药危害全美 原料来自中国（上）</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/10/id13281000-GettyImages-1233275512@1200x1200-600x400.jpg" />
 <h6>2021 年6月4日，在加利福尼亚州圣莫尼卡，人们举着因服用含有芬太尼的药丸中毒而死亡的亲友的照片和标语，在社交媒体应用程序Snapchat 的制造商 Snap, Inc. 总部附近抗议。劳拉·伯曼博士（左），她的儿子塞缪尔在 16 岁时死于毒品，她说她的儿子就是通过 Snapchat上的某个人购买的。(PATRICK T. FALLON/AFP via Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2021年10月04日讯】（大纪元记者李思齐综合报导）致死率极高的<ahref="https://github.com/zwpqwo316/djy/blob/master/gb/tag/%E6%AF%92%E5%93%81.md#1">毒品</a><ahref="https://github.com/zwpqwo316/djy/blob/master/gb/tag/%E8%8A%AC%E5%A4%AA%E5%B0%BC.md#1">芬太尼</a>（Fentanyl）在美国泛滥，且严重程度明显增加。9月30日，美国司法部宣布，执法人员日前截获了180多万颗含芬太尼的<ahref="https://github.com/zwpqwo316/djy/blob/master/gb/tag/%E5%81%87%E5%86%92%E5%A4%84%E6%96%B9%E8%8D%AF.md#1">假冒处方药</a>，以及700多公斤的芬太尼粉。美国缉毒局指，美国境内的绝大多数伪装成处方药的<ahref="https://github.com/zwpqwo316/djy/blob/master/gb/tag/%E6%AF%92%E5%93%81.md#1">毒品</a>在墨西哥生产，而制造芬太尼的化学原料则来自中国。</p>
-<p>联邦司法部副司长丽莎?摩纳哥（Lisa O. Monaco）在9月30日的讲话中说，2020年，有9.3万多美国人死于毒品过量，比2019年高出了30%，是美国历年来最高的因毒品过量而死亡的人数。这其中75%是由阿片类毒品导致的，而合成阿片类药物的<ahref="https://github.com/zwpqwo316/djy/blob/master/gb/tag/%E8%8A%AC%E5%A4%AA%E5%B0%BC.md#1">芬太尼</a>是致死的主要原因。全美国“从小镇、城市到乡村，无一以幸免。”</p>
-<p>摩纳哥说，“一颗含芬太尼的假药就足以致命。”“今年缴获的<ahref="https://github.com/zwpqwo316/djy/blob/master/gb/tag/%E5%81%87%E5%86%92%E5%A4%84%E6%96%B9%E8%8D%AF.md#1">假冒处方药</a>的毒品已超过950多万颗，比过去两年的综合还多。”这些毒品貌似处方药，价格便宜，对像是青少年，对美国社会的危害极其大。</p>
+	<p>【大纪元2021年10月04日讯】（大纪元记者李思齐综合报导）致死率极高的<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E6%AF%92%E5%93%81.md#1">毒品</a><ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E8%8A%AC%E5%A4%AA%E5%B0%BC.md#1">芬太尼</a>（Fentanyl）在美国泛滥，且严重程度明显增加。9月30日，美国司法部宣布，执法人员日前截获了180多万颗含芬太尼的<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E5%81%87%E5%86%92%E5%A4%84%E6%96%B9%E8%8D%AF.md#1">假冒处方药</a>，以及700多公斤的芬太尼粉。美国缉毒局指，美国境内的绝大多数伪装成处方药的<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E6%AF%92%E5%93%81.md#1">毒品</a>在墨西哥生产，而制造芬太尼的化学原料则来自中国。</p>
+<p>联邦司法部副司长丽莎?摩纳哥（Lisa O. Monaco）在9月30日的讲话中说，2020年，有9.3万多美国人死于毒品过量，比2019年高出了30%，是美国历年来最高的因毒品过量而死亡的人数。这其中75%是由阿片类毒品导致的，而合成阿片类药物的<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E8%8A%AC%E5%A4%AA%E5%B0%BC.md#1">芬太尼</a>是致死的主要原因。全美国“从小镇、城市到乡村，无一以幸免。”</p>
+<p>摩纳哥说，“一颗含芬太尼的假药就足以致命。”“今年缴获的<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E5%81%87%E5%86%92%E5%A4%84%E6%96%B9%E8%8D%AF.md#1">假冒处方药</a>的毒品已超过950多万颗，比过去两年的综合还多。”这些毒品貌似处方药，价格便宜，对像是青少年，对美国社会的危害极其大。</p>
 <h2>毒源来自中国</h2>
 <p>近一个月来，美国官方多次正式提到非法芬太尼对美国的危害。 9月27日，美国缉毒局（DEA）6年来首次发布公共安全警报：美国境内含芬太尼和甲基苯丙胺（俗称冰毒）的假冒处方药数量惊人，致死率极高。警报指美国境内的绝大多数假冒处方药毒品在墨西哥生产，而制造芬太尼的化学原料则来自中国。</p>
 <p>8月24日，美中经济与安全评估委员会（USCC）也发布报告指“中国仍然是美国境内非法芬太尼和芬太尼类物质的主要来源国”。目前芬太尼从中国直接进入美国的数量在减少，但转道墨西哥然后非法入境美国的比例在暴增。报告明确提到，中共在这方面的合作“仍然非常有限”。</p>
@@ -41,41 +41,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/8/24/n13184778.md#1">国会报告：中共配合不力 美打击芬太尼受阻</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/8/31/n13199161.md#1">中墨毒贩联盟助长美国致命的芬太尼危机</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/10/4/n13281016.md#1">含芬太尼假冒处方药危害全美 原料来自中国（下）</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/10/3/n13278947.md#1">美贸易代表将宣布对华政策 分析：或增加关税</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/8/24/n13184778.md#1">国会报告：中共配合不力 美打击芬太尼受阻</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/8/31/n13199161.md#1">中墨毒贩联盟助长美国致命的芬太尼危机</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/22/2/7/n13561260.md#1">Omicron传播之广之快 仅1918年大流感堪比</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/22/1/8/n13490898.md#1">沃尔玛下架新疆产品 遭中共舆论轰炸</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10044605.md#1" target="_blank">共产党暴政录：反右运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/15/n11115255.md#1" target="_blank">美国人权报告 中国章节一值得关注的进展</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/3/n10020053.md#1" target="_blank">对知识份子的迫害——思想改造运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/13/n11042473.md#1" target="_blank">感恩李洪志大师 中西方民众的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/9/30/n13272497.md#1">【百年真相】《何日君再来》引惨案 刘雪庵的悲剧人生</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/9/28/n13266900.md#1">【百年真相】《苦菜花》背后的真实故事</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/10/1/n13273915.md#1">美国动物灵媒：小猫能跨越不同维度</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/9/29/n13268154.md#1">美国女歌手曾目击UFO 世界观彻底改变</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/9/30/n13272446.md#1">【未解之谜】人体辉光的奥秘</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/9/21/n13250544.md#1">【思想领袖】马龙：疫苗功效vs自然免疫力</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/10/4/n13281665.md#1">【远见快评】长津湖之战 隐藏多少谎言？</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/10/4/n13281636.md#1">【新闻看点】岸田文雄组鹰派内阁 两岸争相祝贺</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/10/1/n13273127.md#1">Costco八种商品受欢迎 背后有何秘密</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/10/3/n13278343.md#1">袁红冰：傅政华与王小洪争权 公安部内乱</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/10/3/n13278711.md#1">国际调查记者同盟公布“潘多拉文件”</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/10/3/n13278687.md#1">网传“全渠道封杀艺人”名单 赵薇列政治类首位</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/10/4/n13279085.md#1">章子怡手机屏幕遭偷拍 桌布画面曝光</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/10/2/n13276408.md#1">《天桥》获戏剧节目、导演等6奖成金钟大赢家</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/10/3/n13278895.md#1">退出演艺圈13年 黎姿晒全家福庆50岁生日</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/10/2/n13277226.md#1">与两搭档获金钟主持人 炎亚纶爱台感言获大赞</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/10/2/n13275956.md#1">掉发可能是血管出问题？饮食5招提升血管力</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/10/2/n13277215.md#1">口罩阻病毒究竟有没有效？大型试验告诉你</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/10/1/n13273794.md#1">熬夜再补眠就好？研究：连熬10天睡饱一周难补回</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/8/31/n13198803.md#1">【重播】5种常见症状恐是大肠癌</a></li>
-<li><a href="https://github.com/zwpqwo316/djy/blob/master/gb/21/10/3/n13277822.md#1">3岁儿子自称前世死于车祸 美国妈妈被吓到</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zwpqwo316/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zwpqwo316/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/4/n13280995.htm">含芬太尼假冒处方药危害全美 原料来自中国（上）</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/4/n13280995.htm">含芬太尼假冒处方药危害全美 原料来自中国（上）</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zwpqwo316/djy/blob/master/gb/21/10/4/n13280995.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zwpqwo316/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zwpqwo316/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zwpqwo316/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zwpqwo316/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zwpqwo316/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zwpqwo316/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zwpqwo316/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zwpqwo316/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zwpqwo316/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/zwpqwo316/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zwpqwo316/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zwpqwo316/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/zwpqwo316/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zwpqwo316/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zwpqwo316/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zwpqwo316/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zwpqwo316/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zwpqwo316/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zwpqwo316/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zwpqwo316/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zwpqwo316/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zwpqwo316/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zwpqwo316/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zwpqwo316/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwpqwo316/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yirpaj3429/djy/blob/master/gb/21/10/4/n13280995.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
